--- a/desafio5/styles/style.css
+++ b/desafio5/styles/style.css
@@ -18,6 +18,7 @@ body {
     position: sticky;
     top: 0;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     margin: 30px 0;
     background-color: #224655;
@@ -28,7 +29,23 @@ body {
     color: #c0bfbf;
 }
 
+.controls .buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
 .controls button {
+    border-radius: 5px;
+    border: none;
+    padding: 0 5px;
+    color: #d10e0e;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: .8;
+    transition: .3s;
+}
+
+.controls input {
     border-radius: 5px;
     border: none;
     padding: 0 5px;
@@ -44,6 +61,9 @@ body {
     scale: 1.03;
 }
 
+.controls .time {
+}
+
 .container {
   background-color: #224655;
   border-radius: 10px;
@@ -51,7 +71,6 @@ body {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   font-weight: bold;
   color: #c0bfbf;
-  max-height: 100vh;
 }
 
 table {
@@ -61,7 +80,7 @@ table {
 
 td {
   border: 1px solid #c0bfbf;
-  width: clamp(20px, 1vw, 30px);
+  width: clamp(10px, .5vw, 15px);
   aspect-ratio: 1 / 1;
   text-align: center;
   cursor: pointer;
